cleanerupper: add OSPolicyAssignments and staging osconfig resources

--- a/test-infra/prow/config.yaml
+++ b/test-infra/prow/config.yaml
@@ -41,6 +41,7 @@ periodics:
    interval: 24h
    agent: kubernetes
    spec:
+    activeDeadlineSeconds: 1800
     containers:
     - image: gcr.io/compute-image-tools-test/cleanerupper:latest
       args:
