--- a/daisy_workflows/image_build/enterprise_linux/kickstart/el7-post.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/el7-post.cfg
@@ -9,6 +9,9 @@ set -x
 exec &> /dev/ttyS0
 # Install EPEL.
 yum -y install https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm
+# that's a symlink. we don't know the actual name of the package, so we can't
+# validate with rpm -q. Try rpm -qa|grep instead.
+rpm -qa | grep epel-release
 
 # Import all RPM GPG keys.
 curl -o /etc/pki/rpm-gpg/google-rpm-package-key.gpg https://packages.cloud.google.com/yum/doc/rpm-package-key.gpg
@@ -37,6 +40,7 @@ echo "ip_resolve=4" >> /etc/yum.conf
 # Install GCE guest packages and CloudSDK.
 yum install -y google-compute-engine google-osconfig-agent gce-disk-expand
 yum install -y google-cloud-sdk
+rpm -q google-cloud-sdk google-compute-engine google-osconfig-agent gce-disk-expand
 
 # Send /root/anaconda-ks.cfg to our logs.
 cp /run/install/ks.cfg /tmp/anaconda-ks.cfg
@@ -67,6 +71,8 @@ yum -y update
 
 # Install yum-cron.
 yum -y install yum-cron
+rpm -q yum-cron
+
 # Make changes to yum-cron.conf on el7/centos7
 grep apply_updates /etc/yum/yum-cron.conf
 cp /etc/yum/yum-cron.conf /tmp/yum-cron.conf
