--- a/cli_tools_cloudbuild_release_workflow.yaml
+++ b/cli_tools_cloudbuild_release_workflow.yaml
@@ -12,9 +12,9 @@ steps:
     - 'gcloud workflows execute workflow-gradually-rollout
         --data="{
           \"rolloutPhase\":{
-            \"1\":\"asia;asia-east1;asia-east2;asia-northeast1;asia-northeast2;asia-northeast3;asia-south1;asia-southeast1;asia-southeast2;australia-southeast1;australia-southeast2\",
-            \"2\":\"us-east1;us-east4;us-west1;us-west2;us-west3;us-west4\",
-            \"3\":\"us;us-central1;europe;europe-north1;europe-west1;europe-west2;europe-west3;europe-west4;europe-west6;europe-central2;northamerica-northeast1;northamerica-northeast2;southamerica-east1\"
+            \"1\":\"asia;asia-east1;asia-northeast3;australia-southeast1;europe-west1;us-east1\",
+            \"2\":\"europe;asia-east2;asia-northeast1;asia-south1;asia-southeast1;australia-southeast2;europe-north1;europe-west4;northamerica-northeast1;southamerica-east1;us-west1;us-east4\",
+            \"3\":\"us;asia-southeast2;europe-central2;europe-west2;europe-west3;northamerica-northeast2;us-central1;us-west2;us-west4;europe-west6;asia-northeast2\"
           },
           \"tools\":\"gce_vm_image_import;gce_vm_image_export;gce_onestep_image_import;gce_ovf_import;gce_ovf_export;gce_windows_upgrade\",
           \"tagName\":\"$TAG_NAME\",
