--- a/daisy_workflows/image_build/enterprise_linux/kickstart/rhel-7-sap-post.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/rhel-7-sap-post.cfg
@@ -25,7 +25,12 @@ unar
 "
 
 yum install -y ${SAP_PKGS}
-# Because RHEL for SAP versions before 7.6 do not have these agents,
-# we accept failures.
-yum install -y fence-agents-gce resource-agents-gcp || :
+yum install -y fence-agents-gce resource-agents-gcp
+
+# RHEL 7.6 does not have a python3 package available so we are using a bundled
+# python3 package for gcloud.
+if [[ "$(cat /etc/yum/vars/releasever)" == "7.6" ]]; then
+  yum install -y google-cloud-sdk-bundled-python3
+fi
+
 %end
