--- a/daisy_workflows/image_build/enterprise_linux/kickstart/rhel-7-sap-post.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/rhel-7-sap-post.cfg
@@ -26,4 +26,5 @@ unar
 
 yum install -y ${SAP_PKGS}
 yum install -y fence-agents-gce resource-agents-gcp
+rpm -q ${SAP_PKGS} fence-agents-gce resource-agents-gcp
 %end
