newline in SAP post

--- a/daisy_workflows/image_build/enterprise_linux/kickstart/rhel-7-sap-post.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/rhel-7-sap-post.cfg
@@ -27,4 +27,7 @@ unar
 yum install -y ${SAP_PKGS}
 yum install -y fence-agents-gce resource-agents-gcp
 rpm -q ${SAP_PKGS} fence-agents-gce resource-agents-gcp
+echo "done with rhel-7-sap-post.cfg"
+# Must have newline before end directive
+
 %end
