--- a/rollout/cli_tools_cloudbuild_build.yaml
+++ b/rollout/cli_tools_cloudbuild_build.yaml
@@ -18,18 +18,19 @@ substitutions:
   _PREV_RELEASE: 'prev-release'
 
 steps:
-- name: 'docker'
-  dir: 'cli_tools/gce_vm_image_import'
-  args: ['pull', 'gcr.io/$_IMAGE_PROJECT/gce_vm_image_import:$_RELEASE']
-  env: ['CGO_ENABLED=0']
-- name: 'docker'
-  dir: 'cli_tools/gce_vm_image_import'
-  args: ['tag', 'gcr.io/$_IMAGE_PROJECT/gce_vm_image_import:$_RELEASE', 'gcr.io/$_IMAGE_PROJECT/gce_vm_image_import:$_PREV_RELEASE']
-  env: ['CGO_ENABLED=0']
-- name: 'docker'
-  dir: 'cli_tools/gce_vm_image_import'
-  args: ['push', 'gcr.io/$_IMAGE_PROJECT/gce_vm_image_import:$_PREV_RELEASE']
 # Build daisy.
+- name: 'docker'
+  dir: 'daisy/cli'
+  args: ['pull', 'gcr.io/$_IMAGE_PROJECT/daisy:$_RELEASE']
+  env: ['CGO_ENABLED=0']
+- name: 'docker'
+  dir: 'daisy/cli'
+  args: ['tag', 'gcr.io/$_IMAGE_PROJECT/daisy:$_RELEASE', 'gcr.io/$_IMAGE_PROJECT/daisy:$_PREV_RELEASE']
+  env: ['CGO_ENABLED=0']
+- name: 'docker'
+  dir: 'daisy/cli'
+  args: ['push', 'gcr.io/$_IMAGE_PROJECT/daisy:$_PREV_RELEASE']
+  env: ['CGO_ENABLED=0']
 - name: 'golang'
   dir: 'daisy/cli'
   args: ['go', 'build', '-o=/workspace/linux/daisy']
@@ -51,6 +52,18 @@ steps:
   - --dockerfile=daisy.Dockerfile
 
 # Build gce_image_publish.
+- name: 'docker'
+  dir: 'cli_tools/gce_image_publish'
+  args: ['pull', 'gcr.io/$_IMAGE_PROJECT/gce_image_publish:$_RELEASE']
+  env: ['CGO_ENABLED=0']
+- name: 'docker'
+  dir: 'cli_tools/gce_image_publish'
+  args: ['tag', 'gcr.io/$_IMAGE_PROJECT/gce_image_publish:$_RELEASE', 'gcr.io/$_IMAGE_PROJECT/gce_image_publish:$_PREV_RELEASE']
+  env: ['CGO_ENABLED=0']
+- name: 'docker'
+  dir: 'cli_tools/gce_image_publish'
+  args: ['push', 'gcr.io/$_IMAGE_PROJECT/gce_image_publish:$_PREV_RELEASE']
+  env: ['CGO_ENABLED=0']
 - name: 'golang'
   dir: 'cli_tools/gce_image_publish'
   args: ['go', 'build', '-o=/workspace/linux/gce_image_publish']
@@ -72,6 +85,18 @@ steps:
   - --dockerfile=gce_image_publish.Dockerfile
 
 # Build gce_export.
+- name: 'docker'
+  dir: 'cli_tools/gce_export'
+  args: ['pull', 'gcr.io/$_IMAGE_PROJECT/gce_export:$_RELEASE']
+  env: ['CGO_ENABLED=0']
+- name: 'docker'
+  dir: 'cli_tools/gce_export'
+  args: ['tag', 'gcr.io/$_IMAGE_PROJECT/gce_export:$_RELEASE', 'gcr.io/$_IMAGE_PROJECT/gce_export:$_PREV_RELEASE']
+  env: ['CGO_ENABLED=0']
+- name: 'docker'
+  dir: 'cli_tools/gce_export'
+  args: ['push', 'gcr.io/$_IMAGE_PROJECT/gce_export:$_PREV_RELEASE']
+  env: ['CGO_ENABLED=0']
 - name: 'golang'
   dir: 'cli_tools/gce_export'
   args: ['go', 'build', '-o=/workspace/linux/gce_export']
@@ -124,6 +149,18 @@ steps:
   - --dockerfile=gce_vm_image_import.Dockerfile
 
 # Build gce_onestep_image_import.
+- name: 'docker'
+  dir: 'cli_tools/gce_onestep_image_import'
+  args: ['pull', 'gcr.io/$_IMAGE_PROJECT/gce_onestep_image_import:$_RELEASE']
+  env: ['CGO_ENABLED=0']
+- name: 'docker'
+  dir: 'cli_tools/gce_onestep_image_import'
+  args: ['tag', 'gcr.io/$_IMAGE_PROJECT/gce_onestep_image_import:$_RELEASE', 'gcr.io/$_IMAGE_PROJECT/gce_onestep_image_import:$_PREV_RELEASE']
+  env: ['CGO_ENABLED=0']
+- name: 'docker'
+  dir: 'cli_tools/gce_onestep_image_import'
+  args: ['push', 'gcr.io/$_IMAGE_PROJECT/gce_onestep_image_import:$_PREV_RELEASE']
+  env: ['CGO_ENABLED=0']
 - name: 'golang'
   dir: 'cli_tools/gce_onestep_image_import'
   args: ['go', 'build', '-o=/workspace/linux/gce_onestep_image_import']
@@ -137,6 +174,18 @@ steps:
   - --dockerfile=gce_onestep_image_import.Dockerfile
 
 # Build gce_vm_image_export.
+- name: 'docker'
+  dir: 'cli_tools/gce_vm_image_export'
+  args: ['pull', 'gcr.io/$_IMAGE_PROJECT/gce_vm_image_export:$_RELEASE']
+  env: ['CGO_ENABLED=0']
+- name: 'docker'
+  dir: 'cli_tools/gce_vm_image_export'
+  args: ['tag', 'gcr.io/$_IMAGE_PROJECT/gce_vm_image_export:$_RELEASE', 'gcr.io/$_IMAGE_PROJECT/gce_vm_image_export:$_PREV_RELEASE']
+  env: ['CGO_ENABLED=0']
+- name: 'docker'
+  dir: 'cli_tools/gce_vm_image_export'
+  args: ['push', 'gcr.io/$_IMAGE_PROJECT/gce_vm_image_export:$_PREV_RELEASE']
+  env: ['CGO_ENABLED=0']
 - name: 'golang'
   dir: 'cli_tools/gce_vm_image_export'
   args: ['go', 'build', '-o=/workspace/linux/gce_vm_image_export']
@@ -150,6 +199,18 @@ steps:
   - --dockerfile=gce_vm_image_export.Dockerfile
 
 # Build gce_ovf_import.
+- name: 'docker'
+  dir: 'cli_tools/gce_ovf_import'
+  args: ['pull', 'gcr.io/$_IMAGE_PROJECT/gce_ovf_import:$_RELEASE']
+  env: ['CGO_ENABLED=0']
+- name: 'docker'
+  dir: 'cli_tools/gce_ovf_import'
+  args: ['tag', 'gcr.io/$_IMAGE_PROJECT/gce_ovf_import:$_RELEASE', 'gcr.io/$_IMAGE_PROJECT/gce_ovf_import:$_PREV_RELEASE']
+  env: ['CGO_ENABLED=0']
+- name: 'docker'
+  dir: 'cli_tools/gce_ovf_import'
+  args: ['push', 'gcr.io/$_IMAGE_PROJECT/gce_ovf_import:$_PREV_RELEASE']
+  env: ['CGO_ENABLED=0']
 - name: 'golang'
   dir: 'cli_tools/gce_ovf_import'
   args: ['go', 'build', '-o=/workspace/linux/gce_ovf_import']
@@ -163,6 +224,18 @@ steps:
   - --dockerfile=gce_ovf_import.Dockerfile
 
 # Build gce_ovf_export.
+- name: 'docker'
+  dir: 'cli_tools/gce_ovf_export'
+  args: ['pull', 'gcr.io/$_IMAGE_PROJECT/gce_ovf_export:$_RELEASE']
+  env: ['CGO_ENABLED=0']
+- name: 'docker'
+  dir: 'cli_tools/gce_ovf_export'
+  args: ['tag', 'gcr.io/$_IMAGE_PROJECT/gce_ovf_export:$_RELEASE', 'gcr.io/$_IMAGE_PROJECT/gce_ovf_export:$_PREV_RELEASE']
+  env: ['CGO_ENABLED=0']
+- name: 'docker'
+  dir: 'cli_tools/gce_ovf_export'
+  args: ['push', 'gcr.io/$_IMAGE_PROJECT/gce_ovf_export:$_PREV_RELEASE']
+  env: ['CGO_ENABLED=0']
 - name: 'golang'
   dir: 'cli_tools/gce_ovf_export'
   args: ['go', 'build', '-o=/workspace/linux/gce_ovf_export']
@@ -176,6 +249,18 @@ steps:
   - --dockerfile=gce_ovf_export.Dockerfile
 
 # Build gce_windows_upgrade.
+- name: 'docker'
+  dir: 'cli_tools/gce_windows_upgrade'
+  args: ['pull', 'gcr.io/$_IMAGE_PROJECT/gce_windows_upgrade:$_RELEASE']
+  env: ['CGO_ENABLED=0']
+- name: 'docker'
+  dir: 'cli_tools/gce_windows_upgrade'
+  args: ['tag', 'gcr.io/$_IMAGE_PROJECT/gce_windows_upgrade:$_RELEASE', 'gcr.io/$_IMAGE_PROJECT/gce_windows_upgrade:$_PREV_RELEASE']
+  env: ['CGO_ENABLED=0']
+- name: 'docker'
+  dir: 'cli_tools/gce_windows_upgrade'
+  args: ['push', 'gcr.io/$_IMAGE_PROJECT/gce_windows_upgrade:$_PREV_RELEASE']
+  env: ['CGO_ENABLED=0']
 - name: 'golang'
   dir: 'cli_tools/gce_windows_upgrade'
   args: ['go', 'build', '-o=/workspace/linux/gce_windows_upgrade']
