--- a/rollout/cli_tools_cloudbuild_build.yaml
+++ b/rollout/cli_tools_cloudbuild_build.yaml
@@ -19,10 +19,8 @@ substitutions:
 
 steps:
 # Build daisy.
-- name: 'crane'
-  dir: 'daisy/cli'
+- name: 'gcr.io/go-containerregistry/crane:current'
   args: ['tag', 'gcr.io/$_IMAGE_PROJECT/daisy:$_RELEASE', 'gcr.io/$_IMAGE_PROJECT/daisy:$_PREV_RELEASE']
-  env: ['CGO_ENABLED=0']
 - name: 'docker'
   dir: 'daisy/cli'
   args: ['pull', 'gcr.io/$_IMAGE_PROJECT/daisy:$_RELEASE']
