--- a/rollout/cli_tools_cloudbuild_build.yaml
+++ b/rollout/cli_tools_cloudbuild_build.yaml
@@ -20,6 +20,8 @@ substitutions:
 steps:
 # Build daisy.
 - name: 'gcr.io/go-containerregistry/crane:current'
+  args: ['--help']
+- name: 'gcr.io/go-containerregistry/crane:current'
   args: ['tag', 'gcr.io/$_IMAGE_PROJECT/daisy:$_RELEASE', 'gcr.io/$_IMAGE_PROJECT/daisy:$_PREV_RELEASE']
 - name: 'docker'
   dir: 'daisy/cli'
