--- a/rollout/cli_tools_cloudbuild_build.yaml
+++ b/rollout/cli_tools_cloudbuild_build.yaml
@@ -19,9 +19,9 @@ substitutions:
 
 steps:
 # Build daisy.
-- name: 'gcr.io/go-containerregistry/crane:current'
+- name: 'gcr.io/go-containerregistry/crane'
   args: ['--help']
-- name: 'gcr.io/go-containerregistry/crane:current'
+- name: 'gcr.io/go-containerregistry/crane'
   args: ['tag', 'gcr.io/$_IMAGE_PROJECT/daisy:$_RELEASE', 'gcr.io/$_IMAGE_PROJECT/daisy:$_PREV_RELEASE']
 - name: 'docker'
   dir: 'daisy/cli'
