--- a/rollout/cli_tools_cloudbuild_build.yaml
+++ b/rollout/cli_tools_cloudbuild_build.yaml
@@ -22,7 +22,7 @@ steps:
 - name: 'gcr.io/go-containerregistry/crane'
   args: ['--help']
 - name: 'gcr.io/go-containerregistry/crane'
-  args: ['tag', 'gcr.io/$_IMAGE_PROJECT/daisy:$_RELEASE', 'gcr.io/$_IMAGE_PROJECT/daisy:$_PREV_RELEASE']
+  args: ['tag', 'gcr.io/$_IMAGE_PROJECT/daisy:$_RELEASE', '$_PREV_RELEASE']
 - name: 'docker'
   dir: 'daisy/cli'
   args: ['pull', 'gcr.io/$_IMAGE_PROJECT/daisy:$_RELEASE']
